--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,5 +7,21 @@ html {
 body {
     background: linear-gradient(150deg, #ffffff 0%, #f2f2f2 100%);
     font-family: 'Source Sans Pro', sans-serif;
-    color: black;
+    color: #333333;
+    font-size: 16px;
+    line-height: 1.5em;
+}
+
+/* Remove bad blue shadow on tap */
+* { 
+    -webkit-tap-highlight-color:  transparent;
+}
+button:active,
+button:focus 
+a:active,
+a:focus {
+    background-image: none;
+    outline: 0;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
