--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@ html {
 body {
     background: linear-gradient(150deg, #ffffff 0%, #f2f2f2 100%);
     font-family: 'Source Sans Pro', sans-serif;
-    color: #333333;
+    color: rgba(0, 0, 0, 60);
     font-size: 16px;
     line-height: 1.5em;
 }
@@ -17,7 +17,7 @@ body {
     -webkit-tap-highlight-color:  transparent;
 }
 button:active,
-button:focus 
+button:focus,
 a:active,
 a:focus {
     background-image: none;
