--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese');
 
+*,
+::after,
+::before {
+    -webkit-tap-highlight-color: transparent;
+    box-sizing: inherit;
+}
+
+button:active,
+button:focus,
+a:active,
+a:focus {
+    background-image: none;
+    outline: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
 html {
     height: 100%;
 }
@@ -10,18 +27,11 @@ body {
     color: rgba(0, 0, 0, 60);
     font-size: 16px;
     line-height: 1.5em;
+    box-sizing: border-box;
 }
 
-/* Remove bad blue shadow on tap */
-* { 
-    -webkit-tap-highlight-color:  transparent;
-}
-button:active,
-button:focus,
-a:active,
-a:focus {
-    background-image: none;
-    outline: 0;
-    -webkit-box-shadow: none;
-            box-shadow: none;
+body,
+#root {
+    min-height: 100vh;
+    margin: 0;
 }
