--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,9 @@ textarea:focus {
     -webkit-box-shadow: none;
     box-shadow: none;
 }
+button::-moz-focus-inner {
+    border: 0;
+}
 
 html {
     height: 100%;
